fix: display main element on mobile

--- a/app/finance-app/src/app/modules/core/layout/containers/main/main.component.scss
+++ b/app/finance-app/src/app/modules/core/layout/containers/main/main.component.scss
@@ -2,6 +2,10 @@
 
 main,
 mat-drawer::ng-deep>div {
-  height: calc(100vh - 64px - 64px);
+  height: calc(100vh - 64px - 48px);
   @extend %custom-scroll;
+
+  @media (min-width: 600px) {
+    height: calc(100vh - 64px - 64px);
+  }
 }
